# triageops-agent-Lab

./: .env.example  .gitattributes  .gitignore  PROJECT_STATUS.md  README.md  SUPPORTOPS_EVOLUTION_PLAN.md  pyproject.toml
assets/: README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  InvestigationWorkbench.test.tsx  OperationsViews.test.tsx  i18n.tsx  main.tsx
frontend/src/components/: AppShell.module.css  AppShell.tsx  ButtonLink.module.css  ButtonLink.tsx  StatusBadge.module.css  StatusBadge.tsx
frontend/src/lib/: api.test.ts  api.ts  contracts.ts  supportOpsApi.ts
frontend/src/pages/: AuditPage.tsx  ImportTicketsPage.tsx  InvestigationWorkbenchPage.module.css  InvestigationWorkbenchPage.tsx  MetricsPage.tsx  PlaceholderPage.module.css  PlaceholderPage.tsx  TicketQueuePage.module.css  TicketQueuePage.tsx
frontend/src/styles/: global.css  tokens.css
sample_data/supportops/: README.md  tickets.csv  tickets.json
src/tool_use_agent/: __init__.py  composition.py  config.py  demo.py  service.py
tests/: __init__.py  conftest.py  fakes.py  test_api.py  test_composition.py  test_config.py  test_demo.py  test_file_reader.py  test_graph.py  test_investigation_api.py  test_investigation_lifecycle_repository.py  test_investigation_repository.py  test_investigation_service.py  test_service.py  test_ticket_api.py  test_ticket_intake_service.py  test_ticket_repository.py  test_ticket_service.py  test_ticket_state_machine.py  test_utility_tools.py  test_web_search.py
tests/live/: test_live_smoke.py
(+34 files in other folders)
