[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-tool-use-agent"
version = "0.1.0"
description = "A LangGraph tool-use agent powered by Qwen."
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.136.3",
  "httpx==0.28.1",
  "langchain-openai==1.2.2",
  "langgraph==1.2.4",
  "pydantic==2.13.4",
  "python-multipart==0.0.32",
  "uvicorn==0.49.0",
]

[project.optional-dependencies]
dev = ["pytest==9.0.3"]

[project.scripts]
tool-agent = "tool_use_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["live: consumes real provider APIs"]
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated.*:Warning",
]
